# laserposition-estimator

./: CMakeLists.txt  README.md  cameramanager.cpp  cameramanager.h  main.cpp  main.qml  misc.cpp  misc.h  spotfinder.cpp  spotfinder.h  test-spotfinders.cpp  tests.cpp
